# gitrivia

./: Cargo.toml  README.md
src/: analysis.rs  cli.rs  main.rs  utils.rs
src/commands/: author_activity.rs  blame_summary.rs  bus_factor.rs  churn.rs  commit_times.rs  file_contributions.rs  first_commits.rs  mod.rs  stats.rs  top_authors.rs  top_coauthors.rs
src/domain/: blame.rs  bus_factor.rs  churn.rs  coauthors.rs  files.rs  firsts.rs  git.rs  mod.rs  stats.rs  times.rs
src/presentation/: table.rs
