[package]
name = "gitrivia"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow       = "1"
chrono       = { version = "0.4", features = ["serde"] }
clap         = { version = "4.5", features = ["derive"] }
comfy-table  = "7.1"
git2         = "0.18"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
rayon = "1.10"

